#50 Fixes black flicker while switching screen

--- a/scss/favs.scss
+++ b/scss/favs.scss
@@ -1,3 +1,6 @@
+[nav-view-transition][nav-view-direction] {
+background-color: #fcf2e1;
+}
 .fav {
   .row{
     align-items: center;
